# industrial-runtime

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: enforce-branch-naming.yml  pr.yml  release.yml
admin/: CMakeLists.txt  README.md  admin_command.cpp  admin_command.hpp  admin_endpoint.hpp  admin_server.cpp  admin_server.hpp
admin/cli/: irpcli.cpp
admin/tests/: CMakeLists.txt  test_admin_command.cpp
core/: CLAUDE.md  CMakeLists.txt  README.md  main.cpp
core/common/: event.hpp  stream.hpp  tag_value.hpp  types.hpp
core/config/: config.cpp  config.hpp
core/doc/: architecture.md  build-walkthrough.md  data-model.md  roadmap.md
core/doc/modules/: config.md  event-bus.md  logger.md  memory-store.md  plugin-out-of-process.md  plugin-system.md  runtime-engine.md  scheduler.md  tag-engine.md
core/event_bus/: event_bus.cpp  event_bus.hpp  mpmc_queue.hpp
core/irplugin/: plugin.hpp
core/logger/: logger.cpp  logger.hpp
core/memory_store/: memory_store.cpp  memory_store.hpp
core/plugin_host/: plugin_host.cpp  plugin_host.hpp
core/plugin_manager/: plugin_manager.cpp  plugin_manager.hpp
core/runtime_engine/: runtime_api.hpp  runtime_engine.cpp  runtime_engine.hpp
core/scheduler/: scheduler.cpp  scheduler.hpp
core/tag_engine/: tag_engine.cpp  tag_engine.hpp
core/tests/: CMakeLists.txt  test_config.cpp  test_event_bus.cpp  test_memory_store.cpp  test_mpmc_queue.cpp  test_plugin_e2e.cpp  test_plugin_host.cpp  test_plugin_write.cpp  test_s7_plugin.cpp  test_scheduler.cpp  test_tag_engine.cpp  test_types.cpp  test_util.hpp
core/tests/fixtures/demo-writeback/: CMakeLists.txt
core/tests/fixtures/demo-writeback/irplugin/: plugin.hpp  plugin_abi.h
core/tests/fixtures/demo-writeback/src/: demo_writeback.cpp
docs/superpowers/plans/: 2026-06-22-monitor-ext.md
docs/superpowers/reports/: 2026-06-23-monitor-ext-acceptance.md
docs/superpowers/specs/: 2026-06-22-monitor-ext-design.md
irp/: CMakeLists.txt  README.md
irp/codec/: resp1_codec.cpp  resp1_codec.hpp  resp_value.hpp
irp/encoding/: resp1.md
irp/examples/: session.md
irp/protocol/: command.md  datatype.md  error.md
irp/semantic/: dispatcher.cpp  dispatcher.hpp  tag_source.hpp  topic.cpp  topic.hpp  topic_trie.cpp  topic_trie.hpp
irp/server/: core_tag_source.cpp  core_tag_source.hpp  core_tag_writer.cpp  irp_server.cpp  irp_server.hpp
irp/tests/: CMakeLists.txt  test_core_tag_source.cpp  test_dispatcher.cpp  test_irp_e2e.cpp  test_irp_server_smoke.cpp  test_irp_set_e2e.cpp  test_resp1_codec.cpp  test_topic.cpp
irp/transport/: websocket.md
irsp/: CMakeLists.txt  README.md
irsp/codec/: encoding.hpp  irsp1_codec.cpp  irsp1_codec.hpp  irsp_value.hpp  msgpack_codec.cpp  msgpack_codec.hpp
irsp/doc/encoding/: irsp1.md  msgpack.md
irsp/doc/examples/: session.md
irsp/doc/protocol/: command.md  error.md
irsp/doc/transport/: tcp.md  websocket.md
irsp/encoding/: irsp1.md  msgpack.md
irsp/protocol/: datatype.md
irsp/semantic/: dispatcher.cpp  dispatcher.hpp  tag_source.hpp  tag_writer.hpp  topic.cpp  topic.hpp  topic_trie.cpp  topic_trie.hpp
irsp/server/: core_tag_source.cpp  core_tag_source.hpp  core_tag_writer.cpp  core_tag_writer.hpp  irsp_server.cpp  irsp_server.hpp
irsp/tests/: CMakeLists.txt  test_core_tag_source.cpp  test_dispatcher.cpp  test_irsp1_codec.cpp  test_irsp_e2e.cpp  test_irsp_server_smoke.cpp  test_msgpack_codec.cpp  test_topic.cpp
irsp/transport/: tcp.md
plugins/example/: CMakeLists.txt  example_plugin.cpp
plugins/s7/: CMakeLists.txt
plugins/s7/include/: s7_backend.hpp  snap7_backend.hpp
plugins/s7/src/: s7_plugin.cpp
sdk/irp-client/: .gitignore
sdk/irp-client/JS/examples/: demo.mjs
sdk/irp-client/JS/src/: client.js  index.js  resp1.js
sdk/irp-client/Python/: setup.cfg
sdk/irp-client/Python/examples/: demo.py
sdk/irp-client/Python/src/irp_client/: __init__.py  client.py
sdk/irsp-client/JS/: README.md  package.json
sdk/irsp-client/JS/examples/: demo.mjs  index.html  serve.mjs  styles.css
sdk/irsp-client/JS/examples/tabs/: benchmark.js  command.js  monitor.js  writeback.js
sdk/irsp-client/JS/src/: client.js  index.js  irsp1.js  perf.js
sdk/irsp-client/JS/test/: encode-value.test.js  irsp1.test.js  perf.test.js  set.test.js
sdk/irsp-client/Python/: README.md  setup.cfg
sdk/irsp-client/Python/examples/: demo.py
sdk/irsp-client/Python/src/: compare.py
sdk/irsp-client/Python/src/irsp_client/: __init__.py  client.py  irsp1.py  msgpack_codec.py
sdk/irsp-client/Python/tests/: test_irsp1.py  test_msgpack.py
sdk/plugin-sdk/: CMakeLists.txt  README.md
sdk/plugin-sdk/example/: CMakeLists.txt
sdk/plugin-sdk/example/irplugin/: plugin_abi.h
sdk/plugin-sdk/example/src/: example_plugin.cpp
sdk/plugin-sdk/include/irplugin/: plugin.hpp  plugin_abi.h
tools/: format.ps1  format.sh  lint.ps1  run-build.ps1
tools/PyS7Plugin/: README.md  py_s7_plugin.json  s7_driver.py
tools/PyS7Plugin/bridge/: CMakeLists.txt  pyhost_bridge.cpp
tools/S7ServerMock/: .gitignore  README.md  irsp_test.py  main.py
