[metadata]
name = irsp-client
version = 1.0.0
description = IRSP (Industrial Runtime Serialization Protocol) WebSocket client SDK — pure Python, asyncio.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    websockets>=12

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8
